objects/Rosco_Log__c/Rosco_Log__c.object-meta.xml
<CustomObject>
    <label>Rosco Log</label>
    <nameField>
        <displayFormat>rosco-{00000000}</displayFormat>
        <label>Rosco Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rosco Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>