objects/Rosco_Log__c/fields/Exception_StackTraceString__c.field-meta.xml
<CustomField>
    <fullName>Exception_StackTraceString__c</fullName>
    <label>Exception_StackTraceString</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>