objects/Rosco_Log__c/fields/General__c.field-meta.xml
<CustomField>
    <fullName>General__c</fullName>
    <label>General</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>