objects/Rosco_Log__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <length>32</length>
    <type>Text</type>
</CustomField>