objects/Rosco_Log__c/fields/Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Log_Id__c</fullName>
    <label>Log Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>