objects/Rosco_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>64</length>
    <type>Text</type>
</CustomField>